feat: sudocu solver updated